# Ouroboros-key-champion-council

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHAMPION_COUNCIL_EVAL_REPORT.md  CHATGPT_ACTION_OPENAPI.yaml  Dockerfile  OUROBOROS_MCP_EVALUATION_REPORT.md  Orchestrating_Local_AI_With_Champion_Council.m4a  README.md  VAST_DREAMER_DESIGN.md  backup_hot_worktree.ps1  backup_workspace.ps1  close_text_theater.ps1  cocoon_adapter.py  continuity_restore.py  open_text_theater.ps1  pack_storage.py  package-lock.json  package.json  persistence.py  provision_d_primary_workspace.ps1  requirements.txt  run_local.ps1  run_text_theater.ps1  server.py  sync_d_workspace_mirrors.ps1
capsule/: dreamer_config.json
docs/: AGENT_COMPILER_MODALITY_ACCLIMATION_REPORT_2026-03-14.md  ARCHIVED_LIVE_PAIRED_STATE_RESOURCE_SPEC_2026-04-15.md  ASSET_INGESTION_PIPELINE.md  ASSOCIATIVE_CONTINUITY_ADRENALINE_SITREP_2026-04-15.md  CHARACTER_COMMAND_REGISTRY.md  (+168 more)
middle-passage/: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
middle-passage/.github/workflows/: tests.yml
middle-passage/data/: README.md
middle-passage/docs/: PHASE_0_SCOPE.md  PYPI_RELEASE.md
middle-passage/middle_passage/: __init__.py  cli.py  ethics.py  pipeline.py
middle-passage/middle_passage/bathymetry/: __init__.py  gebco.py  trenches.py
middle-passage/middle_passage/currents/: __init__.py  drift.py  routes.py
middle-passage/middle_passage/events/: __init__.py  jettison.py
middle-passage/middle_passage/mapping/: __init__.py  geojson.py
middle-passage/middle_passage/physics/: __init__.py  descent.py  scatter.py
middle-passage/middle_passage/voyages/: __init__.py  filter.py  loader.py  models.py
middle-passage/tests/: test_cli.py  test_loader.py  test_pipeline_geojson.py
(+1304 files in other folders)
